1-vpc.tf
//create VPC with name e-commerce
resource "aws_vpc" "main" {
  cidr_block           = var.vpc_cidr
  instance_tenancy     = "default"
  enable_dns_hostnames = "true"
  enable_dns_support   = "true"

  tags = {
    Name      = "${var.basename}-vpc"
    Createdby = "Terraform"
  }
}
